// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlashIcon renders default 1`] = `
<div>
  <svg
    class="sc-hLQSwg hewGWh"
    stroke="currentcolor"
    viewBox="-2 -2 28 28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      stroke-linecap="round"
      stroke-width="2"
      x1="1"
      x2="23"
      y1="23"
      y2="1"
    />
  </svg>
</div>
`;

exports[`SlashIcon renders large 1`] = `
<div>
  <svg
    class="sc-hLQSwg hewGWh"
    stroke="currentcolor"
    viewBox="-2 -2 28 28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      stroke-linecap="round"
      stroke-width="2"
      x1="1"
      x2="23"
      y1="23"
      y2="1"
    />
  </svg>
</div>
`;

exports[`SlashIcon renders medium 1`] = `
<div>
  <svg
    class="sc-dmyCSP dRcSrL"
    stroke="currentcolor"
    viewBox="-1 -1 26 26"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      stroke-linecap="round"
      stroke-width="3"
      x1="1.5"
      x2="22.5"
      y1="22.5"
      y2="1.5"
    />
  </svg>
</div>
`;

exports[`SlashIcon renders small 1`] = `
<div>
  <svg
    class="sc-guDLey kBBjNb"
    stroke="currentcolor"
    viewBox="0 1 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      stroke-linecap="round"
      stroke-width="4"
      x1="2"
      x2="22"
      y1="22"
      y2="4"
    />
  </svg>
</div>
`;
